src/test/deca/context/invalid/sansObj/minus-unaire-bool.deca
// Description:
//          Utilisation du moins unaire sur un booléen
//
// Résultat:
//Le terme à rendre négatif doit être un nombre
//
{
    boolean bool;
    bool = -false;
}